# my_OpenGL_journey_code

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  NOTES.md  run.sh
app/: CMakeLists.txt  main.cxx
app/include/app/core/: shader.hxx
app/src/: app.cxx
shaders/: fs.glsl  light_fs.glsl  light_vs.glsl  vs.glsl
src/: CMakeLists.txt  main.cxx
src/include/: app.hxx  camera.hxx  data_types.hxx  helper.hxx  render.hxx  shader.hxx  textures.hxx
